# federated-satellites

./: .gitignore  LICENSE  README.md  client.py  config_maker.py  download_datasets.sh  log.md  pyproject.toml  server.py  slrum_fed_sats.sh  slrum_interact.sh  test.ipynb  test.py
CIFAR/: cifar10data.py
EUROSAT/: data.py
FEMNIST_tests/: femnist.py
Strategies/: AutoFLSat.py  AutoFLSat2.py  fed_sat.py  fedavg2_sat.py  fedavg3_sat.py  fedavg_sat.py  fedbuff2_sat.py  fedbuff3_sat.py  fedbuff_sat.py  fedprox2_sat.py  fedprox3_sat.py  fedprox_sat.py  fedsat_gen.py  utils.py
Strategies/csv_stk/: Chain1_Access_Data_9sat_5plane.csv  Chain2_Access_Data_1_sat_5_plane.csv  Satellite-Satellite4-To-Place-Colorado_Springs_Access.csv  data_org_pipeline.ipynb
data_analysis/: data_analysis.ipynb
dataset_downloads/FEMNIST/: femnist.py
project/client/: client.py
project/config/: config.yaml
project/fed/: server.py
project/fed/strategies/: AutoFLSat2.py  fedavg2_sat.py  fedavg3_sat.py  fedavg_sat.py  fedbuff_sat.py  fedprox2_sat.py  fedprox3_sat.py  fedprox_sat.py  fedsat_gen.py  utils.py
project/utils/: cifar10data.py  datasets.py  eurosat.py  femnist.py  stk.py
